// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BigCommerce/> Detail should render a detail view 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Apps & integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          BigCommerce
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/bigcommerce/"
    >
      App Details
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/bigcommerce/connections"
    >
      Connections
    </a>
  </nav>
  <header
    class="hero"
  >
    <img
      alt="BigCommerce's logo"
      class="heroImage"
      src="/assets/img/integrations/bigcommerce.svg"
    />
    <div>
      <h1
        class="heroHeading"
      >
        BigCommerce
      </h1>
      <p
        class="heroDescription"
      >
        Display customer BigCommerce profile & orders next to their ticket.
      </p>
      <div
        class="heroMeta"
      >
        <span
          class="badge badge badge-secondary badge-pill"
        >
          ECOMMERCE
        </span>
        <span
          class="by"
        >
          by
           
          <a
            href="https://www.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Gorgias
          </a>
        </span>
      </div>
    </div>
  </header>
  <main
    class="main"
  >
    <section
      class="longDescription"
    >
      <h2
        class="categoryTitle"
      >
        About
      </h2>
      <div>
        <p>
          BigCommerce is an ecommerce platform that provides 'software as a service' services to retailers. The company’s platform includes online store creation, search engine optimization, hosting, marketing and security.
        </p>
        <p>
          With Gorgias, you can:
        </p>
        <ul>
          <li>
            View BigCommerce customer and order information in a customer's ticket.
          </li>
          <li>
            Easily access links to customer and order profile.
          </li>
        </ul>
      </div>
      <ul
        class="screenshotList"
      >
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 1 of things this app allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/bigcommerce-1.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 2 of things this app allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/bigcommerce-2.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 3 of things this app allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/bigcommerce-3.png"
          />
        </li>
      </ul>
    </section>
    <div
      class="infoCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="connectWrapper"
        >
          <a
            class="connectButtonWrapper"
            href="https://store-pk360c6roo.mybigcommerce.com/manage/marketplace/apps/my-apps"
          >
            <button
              class="wrapper actionButton fill primary medium"
              type="button"
            >
              Connect App
            </button>
          </a>
        </div>
        <h2
          class="categoryTitle cardTitle"
        >
          Pricing
        </h2>
        <ul
          class="cardList"
        >
          <li>
            Contact BigCommerce for pricing details.
          </li>
          <li>
            <a
              class="actionLink"
              href="https://www.bigcommerce.com/essentials/pricing/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                attach_money
              </i>
              See pricing details
            </a>
          </li>
        </ul>
        <h2
          class="categoryTitle cardTitle"
        >
          Resources
        </h2>
        <ul
          class="cardList"
        >
          <li>
            <a
              class="actionLink"
              href="https://docs.gorgias.com/bigcommerce-105241"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                description
              </i>
              Documentation
            </a>
          </li>
          <li>
            <a
              class="actionLink"
              href="https://www.bigcommerce.com/privacy/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                privacy_tip
              </i>
              Privacy Policy
            </a>
          </li>
        </ul>
      </div>
    </div>
  </main>
</div>
`;

exports[`<BigCommerce/> Integration should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Apps & integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/bigcommerce/connections"
          >
            BigCommerce
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert loading mb-4"
        >
          <div
            class="iconContainer"
          >
            <span
              class="loadingIcon"
            >
              <svg
                class="spinner dark"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
                width="100%"
              >
                <circle
                  class="dot"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="circle"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </span>
          </div>
          <div
            class="content"
          >
            <span
              class="label"
            >
              Import in progress. We typically sync 3,000 customers an hour. We will send you an email once it is done. Feel free to leave this page.
            </span>
          </div>
        </div>
        <form>
          <label
            class="label isDisabled mb-2"
            for="disabled-store-field"
          >
            Store domain
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <div
              class="wrapper isDisabled isNested"
            >
              <input
                class="input"
                disabled=""
                id="disabled-store-field"
                name="store-name"
                type="text"
                value=""
              />
            </div>
          </span>
          <div>
            <button
              class="wrapper float-right fill destructive medium"
              id="integration-deletion-confirm-button"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete App
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BigCommerce/> List should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Apps & integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          BigCommerce
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/bigcommerce/"
    >
      App Details
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/bigcommerce/connections"
    >
      Connections
    </a>
  </nav>
  <ul
    class="list"
  >
    <li
      class="listItem"
    >
      <a
        class="link"
        to="/app/settings/integrations/bigcommerce/1"
      >
        <span>
          myShop1
        </span>
      </a>
    </li>
  </ul>
  <div
    class="wrapper"
  >
    <a
      class="connectButtonWrapper"
      href="https://store-pk360c6roo.mybigcommerce.com/manage/marketplace/apps/my-apps"
    >
      <button
        class="wrapper actionButton fill primary medium"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            add
          </i>
          Connect BigCommerce
        </span>
      </button>
    </a>
  </div>
</div>
`;
